PKJAG-2775 Fixed labels being visible through sidenav

--- a/tps-vedlikehold-provider/tps-vedlikehold-provider-web/src/main/web-src/src/assets/less/servicerutine.less
+++ b/tps-vedlikehold-provider/tps-vedlikehold-provider-web/src/main/web-src/src/assets/less/servicerutine.less
@@ -7,6 +7,10 @@
 
     .tps-input-input-container {
       margin: 8px 0;
+
+      label {
+        z-index: auto;
+      }
     }
 
     .date-picker-container {
